<resources>
    <string name="app_name">Pingterest</string>
    <string name="submit">Submit</string>
    <string name="password_check">Password Check</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="find_coach">Find coach</string>
    <string name="find_coach_1">please enter your preference</string>
    <string name="find_coach_2">Find your coach</string>
    <string name="find_coach_3">Gender</string>
    <string name="find_coach_4">Age</string>
    <string name="find_coach_5">Zip code</string>
    <string name="find_coach_6">Skill level</string>
    <string name="find_coach_7">Price (Please enter integer)</string>
    <string name="find_coach_8">Coach rating</string>
    <string name="find_player">find player</string>
    <string name="find_event_1">please enter your preference</string>
    <string name="find_event_2">Zip code</string>
    <string name="find_event_3">Distance</string>
    <string name="find_event_4">Date</string>
    <string name="find_event_5">Time</string>
    <string name="find_event_6">Find your event</string>
    <string name="equipments">equipments</string>
    <string name="me">Me</string>
    <string name="edit">Edit</string>
    <string name="title_activity_bottom_navigation">bottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="send">Send</string>
    <string name="search">Search</string>
    <string name="search_hint">Search Me</string>
    <string name="app_label">value</string>
    <string name="title_activity_view_database">viewDatabase</string>
    <string name="title_activity_equipment_information">EquipmentInformation</string>
    <string-array name="gender">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="skill_level">
        <item>Skill level</item>
        <item>Beginner</item>
        <item>Intermediate</item>
        <item>Amatuer</item>
        <item>Professional</item>
        <item>Expert</item>
    </string-array>
    <string-array name="skill_level_num">
        <item>Skill level</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
